# e-nose

./: .gitignore  README.md  arduino_enose_persistent.ino  setup_git.bat  setup_github_remote.bat
backend/: .gitignore  Cargo.toml  config.toml
backend/src/: filtering.rs  influxdb.rs  main.rs
frontend/: config.py  main.py  requirements.txt  utils.py
readme/: SINUSOIDAL_MODULATION.md
