[package]
name = "enose"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
influxdb2 = "0.5"
chrono = "0.4"
anyhow = "1"
futures = "0.3"
tokio-serial = "5.4.5"
toml = "0.9.8"
futures-util = "0.3.31"
dotenv = "0.15"
